--- a/package.json
+++ b/package.json
@@ -25,13 +25,41 @@
   "files": [
     "dist"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "@wordpress/api-fetch": "^3.11.0",
+    "@wordpress/block-editor": "^3.7.0",
+    "@wordpress/block-library": "^2.14.0",
+    "@wordpress/components": "^9.2.0",
+    "@wordpress/core-data": "^2.12.0",
+    "@wordpress/data": "^4.14.0",
+    "@wordpress/dom": "^2.8.0",
+    "@wordpress/editor": "^9.12.0",
+    "@wordpress/element": "^2.11.0",
+    "@wordpress/hooks": "^2.7.0",
+    "@wordpress/i18n": "^3.9.0",
+    "@wordpress/is-shallow-equal": "^1.8.0",
+    "@wordpress/keycodes": "^2.9.0",
+    "@wordpress/rich-text": "^3.12.0",
+    "@wordpress/server-side-render": "^1.8.0",
+    "@wordpress/url": "^2.11.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.4.4",
+    "lodash": "^4.17.15",
+    "mousetrap": "^1.6.5",
+    "react": "^16.12.0",
+    "react-autosize-textarea": "^7.0.0"
+  },
   "devDependencies": {
     "@types/jest": "^25.1.2",
+    "@types/lodash": "^4.14.149",
+    "@types/mousetrap": "^1.6.3",
     "@types/node": "^13.7.1",
+    "@types/react": "^16.9.19",
     "@typescript-eslint/eslint-plugin": "^2.19.2",
     "@typescript-eslint/parser": "^2.19.2",
     "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.18.3",
     "jest": "^25.1.0",
     "jest-circus": "^25.1.0",
     "ts-jest": "^25.2.0",
