--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,7 +84,7 @@ jobs:
         run: echo "::set-env name=RUNNING::"
         if: "! env.GIT_DIFF"
       - name: Set running flag
-        if: matrix.node == '12' && github.ref == join('refs/heads/', github.event.repository.default_branch)
+        if: matrix.node == '12' && github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
         run: echo "::set-env name=RUNNING::1"
       - name: Set running flag
         run: |
