--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "declaration": true,
     // "declarationMap": true,                /* Generates a sourcemap for each corresponding '.d.ts' file. */
     /* Generates corresponding '.map' file. */
-    "sourceMap": true,
+    "sourceMap": false,
     // "outFile": "./",                       /* Concatenate and emit output to single file. */
     "outDir": "./dist",
     /* Redirect output structure to the directory. */
