--- a/package.json
+++ b/package.json
@@ -42,6 +42,10 @@
     "@wordpress/rich-text": "^3.12.0",
     "@wordpress/server-side-render": "^1.8.0",
     "@wordpress/url": "^2.11.0",
+    "@wordpress/blocks": "^6.12.0",
+    "@wordpress/compose": "^3.11.0",
+    "@wordpress/dom-ready": "^2.7.0",
+    "@wordpress/format-library": "^1.14.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.4",
