--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.4",
+    "jsdom": "^16.2.1",
     "lodash": "^4.17.15",
     "mousetrap": "^1.6.5",
     "react": "^16.13.1",
@@ -59,7 +60,6 @@
     "@types/lodash": "^4.14.149",
     "@types/mousetrap": "^1.6.3",
     "@types/node": "^13.9.3",
-    "@types/react": "^16.9.25",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
     "eslint": "^6.8.0",
