--- a/package.json
+++ b/package.json
@@ -27,24 +27,24 @@
   ],
   "dependencies": {
     "@wordpress/api-fetch": "^3.11.0",
-    "@wordpress/block-editor": "^3.7.6",
-    "@wordpress/block-library": "^2.14.6",
-    "@wordpress/blocks": "^6.12.2",
-    "@wordpress/components": "^9.2.5",
+    "@wordpress/block-editor": "^3.7.7",
+    "@wordpress/block-library": "^2.14.7",
+    "@wordpress/blocks": "^6.12.3",
+    "@wordpress/components": "^9.2.6",
     "@wordpress/compose": "^3.11.0",
-    "@wordpress/core-data": "^2.12.2",
+    "@wordpress/core-data": "^2.12.3",
     "@wordpress/data": "^4.14.2",
     "@wordpress/dom": "^2.8.0",
     "@wordpress/dom-ready": "^2.7.0",
-    "@wordpress/editor": "^9.12.6",
+    "@wordpress/editor": "^9.12.7",
     "@wordpress/element": "^2.11.0",
-    "@wordpress/format-library": "^1.14.6",
+    "@wordpress/format-library": "^1.14.7",
     "@wordpress/hooks": "^2.7.0",
     "@wordpress/i18n": "^3.9.0",
     "@wordpress/is-shallow-equal": "^1.8.0",
     "@wordpress/keycodes": "^2.9.0",
     "@wordpress/rich-text": "^3.12.2",
-    "@wordpress/server-side-render": "^1.8.5",
+    "@wordpress/server-side-render": "^1.8.6",
     "@wordpress/url": "^2.11.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
@@ -53,19 +53,20 @@
     "lodash": "^4.17.15",
     "mousetrap": "^1.6.5",
     "react": "^16.13.1",
-    "react-autosize-textarea": "^7.0.0"
+    "react-autosize-textarea": "^7.0.0",
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
     "@types/jest": "^25.1.4",
     "@types/lodash": "^4.14.149",
     "@types/mousetrap": "^1.6.3",
-    "@types/node": "^13.9.3",
+    "@types/node": "^13.9.5",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.19.0",
-    "jest": "^25.1.0",
-    "jest-circus": "^25.1.0",
+    "jest": "^25.2.3",
+    "jest-circus": "^25.2.3",
     "ts-jest": "^25.2.1",
     "typescript": "^3.8.3"
   },
