--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -11,6 +11,7 @@ jobs:
   update:
     name: Update npm dependencies
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     steps:
       - uses: technote-space/load-config-action@v1
         with:
