--- a/.github/workflows/sync-workflows.yml
+++ b/.github/workflows/sync-workflows.yml
@@ -12,7 +12,7 @@ jobs:
     timeout-minutes: 5
     steps:
       - name: Sync workflows
-        uses: technote-space/create-pr-action@gh-actions
+        uses: technote-space/create-pr-action@v2
         with:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           EXECUTE_COMMANDS: |
