--- a/.github/workflows/sync-workflows.yml
+++ b/.github/workflows/sync-workflows.yml
@@ -3,6 +3,7 @@ on:
     - cron: 0 10 * * 4
   repository_dispatch:
     types: [sync-workflows]
+  workflow_dispatch:
 
 name: Sync workflows
 jobs:
