--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "update": "npx npm-check-updates -u && yarn install && yarn upgrade && yarn audit"
   },
   "dependencies": {
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.1.1",
     "@wordpress/api-fetch": "^3.20.0",
     "@wordpress/block-editor": "^5.1.0",
     "@wordpress/block-library": "^2.26.0",
@@ -55,7 +56,6 @@
     "@wordpress/server-side-render": "^1.19.0",
     "@wordpress/url": "^2.19.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.5",
     "enzyme-to-json": "^3.6.1",
     "jsdom": "^16.4.0",
     "lodash": "^4.17.20",
