--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "update": "npx npm-check-updates -u && yarn install && yarn upgrade && yarn audit"
   },
   "dependencies": {
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.3.1",
     "@wordpress/api-fetch": "^3.20.0",
     "@wordpress/block-editor": "^5.1.3",
     "@wordpress/block-library": "^2.26.3",
@@ -56,13 +55,14 @@
     "@wordpress/server-side-render": "^1.19.1",
     "@wordpress/url": "^2.19.0",
     "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
     "enzyme-to-json": "^3.6.1",
     "jsdom": "^16.4.0",
     "lodash": "^4.17.20",
     "mousetrap": "^1.6.5",
-    "react": "^17.0.1",
+    "react": "16.13.1",
     "react-autosize-textarea": "^7.1.0",
-    "react-dom": "^17.0.1"
+    "react-dom": "16.13.1"
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
