--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "lint": "eslint 'src/**/*.ts' '__tests__/**/*.ts' --cache",
     "lint:fix": "eslint --fix 'src/**/*.ts' '__tests__/**/*.ts'",
     "test": "yarn lint && yarn cover",
-    "update": "npx npm-check-updates -u && yarn install && yarn upgrade && yarn audit"
+    "update": "npx npm-check-updates -u -x react,react-dom && yarn install && yarn upgrade && yarn audit"
   },
   "dependencies": {
     "@wordpress/api-fetch": "^3.21.0",
@@ -60,9 +60,9 @@
     "jsdom": "^16.4.0",
     "lodash": "^4.17.20",
     "mousetrap": "^1.6.5",
-    "react": "17.0.1",
+    "react": "16.14.0",
     "react-autosize-textarea": "^7.1.0",
-    "react-dom": "17.0.1"
+    "react-dom": "16.14.0"
   },
   "devDependencies": {
     "@types/jest": "^26.0.19",
