--- a/.github/workflows/sync-workflows.yml
+++ b/.github/workflows/sync-workflows.yml
@@ -23,6 +23,7 @@ jobs:
 
             bash .github/workflows/.tmp/workflows/ts-repo/copy.sh release
             sed -i 's/cron:.\+$/cron: 0 9 * * 1/' .github/workflows/update-dependencies.yml
+            sed -i 's/npx npm-check-updates -u --packageFile package.json/npx npm-check-updates -u -x react,react-dom --packageFile package.json/' .github/workflows/update-dependencies.yml
 
             rm -rdf .github/workflows/.tmp
           COMMIT_MESSAGE: 'chore: sync workflows'
