--- a/.github/workflow-settings.json
+++ b/.github/workflow-settings.json
@@ -17,9 +17,13 @@
   "TOC_TARGET_PATHS": "README*.md",
   "BRANCH_PREFIX": "release/",
   "ANNOTATION_EXCLUDE_PATTERNS": [
-    "warning",
+    "warning jest",
+    "warning babel",
     "Cloning into",
     "has unmet peer dependency",
-    "has incorrect peer dependency"
+    "has incorrect peer dependency",
+    "Using version",
+    "travis-ci",
+    "tests/bootstrap.php"
   ]
 }
