--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -35,7 +35,7 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           EXECUTE_COMMANDS: |
-            npx npm-check-updates -u --packageFile package.json
+            npx npm-check-updates -u -x react,react-dom --packageFile package.json
             yarn install
             yarn upgrade
             yarn audit
