--- a/package.json
+++ b/package.json
@@ -31,28 +31,28 @@
     "lint": "eslint 'src/**/*.ts' '__tests__/**/*.ts' --cache",
     "lint:fix": "eslint --fix 'src/**/*.ts' '__tests__/**/*.ts'",
     "test": "yarn lint && yarn cover",
-    "update": "npx npm-check-updates -u -x react,react-dom && yarn install && yarn upgrade && yarn audit"
+    "update": "npx npm-check-updates -u --timeout 100000 && yarn install && yarn upgrade && yarn audit"
   },
   "dependencies": {
     "@wordpress/api-fetch": "^5.1.1",
-    "@wordpress/block-editor": "^6.1.4",
-    "@wordpress/block-library": "^3.2.7",
+    "@wordpress/block-editor": "^6.1.7",
+    "@wordpress/block-library": "^3.2.10",
     "@wordpress/blocks": "^9.1.4",
-    "@wordpress/components": "^14.1.3",
+    "@wordpress/components": "^14.1.4",
     "@wordpress/compose": "^4.1.2",
-    "@wordpress/core-data": "^3.1.7",
+    "@wordpress/core-data": "^3.1.8",
     "@wordpress/data": "^5.1.2",
     "@wordpress/dom": "^3.1.1",
     "@wordpress/dom-ready": "^3.1.1",
-    "@wordpress/editor": "^10.1.7",
+    "@wordpress/editor": "^10.1.10",
     "@wordpress/element": "^3.1.1",
-    "@wordpress/format-library": "^2.1.4",
+    "@wordpress/format-library": "^2.1.7",
     "@wordpress/hooks": "^3.1.1",
     "@wordpress/i18n": "^4.1.1",
     "@wordpress/is-shallow-equal": "^4.1.1",
     "@wordpress/keycodes": "^3.1.1",
     "@wordpress/rich-text": "^4.1.2",
-    "@wordpress/server-side-render": "^2.1.4",
+    "@wordpress/server-side-render": "^2.1.5",
     "@wordpress/url": "^3.1.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
@@ -60,21 +60,21 @@
     "jsdom": "^16.6.0",
     "lodash": "^4.17.21",
     "mousetrap": "^1.6.5",
-    "react": "16.14.0",
+    "react": "17.0.2",
     "react-autosize-textarea": "^7.1.0",
-    "react-dom": "16.14.0"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/jest": "^26.0.23",
     "@types/lodash": "^4.14.170",
     "@types/mousetrap": "^1.6.8",
-    "@types/node": "^15.12.4",
-    "@typescript-eslint/eslint-plugin": "^4.27.0",
-    "@typescript-eslint/parser": "^4.27.0",
+    "@types/node": "^15.12.5",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
     "eslint": "^7.29.0",
     "eslint-plugin-react": "^7.24.0",
-    "jest": "^27.0.4",
-    "jest-circus": "^27.0.4",
+    "jest": "^27.0.5",
+    "jest-circus": "^27.0.5",
     "ts-jest": "^27.0.3",
     "typescript": "^4.3.4"
   },
