--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@types/node": "^15.12.5",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "@typescript-eslint/parser": "^4.28.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.2",
     "eslint": "^7.29.0",
     "eslint-plugin-react": "^7.24.0",
     "jest": "^27.0.5",
